Fix ordering of particle classes in reducer